--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,35 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
+{% extends 'base.html' %}
+{% block title %}
     <title>登陆</title>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <meta name="description" content="" />
-    <link rel="stylesheet" href="/static/lib/weui.min.css" />
-    <link rel="stylesheet" href="/static/css/jquery-weui.css" />
-    <link rel="stylesheet" href="/static/css/style.css" />
-  </head>
-  <body ontouchstart class="container" style="background:#323542;">
-    <!--主体-->
+    <style type="text/css">
+    body {
+        background:#232323;
+    }
+    </style>
+{% endblock %}
+{% block container %}
+<!--主体-->
     <div class="login-box">
-      <div class="lg-title">欢迎登陆积分商城</div>
+      <div class="lg-title">欢迎登陆</div>
       <div class="login-form">
-        <form action="#">
+          <div class="lg-header">
+              <div class="forgets">
+                 <a href="#"><label class="account">账号登录</label></a>
+                 <a href="#"><label class="verify">验证码登录</label></a>
+             </div>
+          </div>
+        <form action="{% url 'account:user_login' %}" method="post">
           <div class="login-user-name common-div">
             <span class="eamil-icon common-icon">
               <img src="/static/images/eamil.png" />
             </span>
             <input
-              type="email"
+              type="text"
               name="username"
-              value=""
+              value="{{ form.username.value|default_if_none:'' }}"
               placeholder="请输入您的手机号"
             />
           </div>
+            {{ form.username.errors }}
+
           <div class="login-user-pasw common-div">
             <span class="pasw-icon common-icon">
               <img src="/static/images/password.png" />
@@ -41,25 +43,44 @@
               placeholder="请输入您的密码"
             />
           </div>
-          <a href="javascript:;" class="login-btn common-div">登陆</a>
-          <a href="javascript:;" class="login-oth-btn common-div">微信登陆</a>
-          <a href="javascript:;" class="login-oth-btn common-div">QQ登陆</a>
+             {{form.password.errors }}
+          <!-- 验证码  -->
+            <div class="login-user-code common-div">
+               <div class="weui-cell__bd">
+              <input
+                  type="text"
+                  name="verify_code"
+                  value=""
+                  placeholder="请输入您的验证码"
+                />
+            </div>
+                <div class="weui-cell__ft">
+                <img class="verify-code-img"
+                     style="width: 100%; height: 100%;"
+                     src="{% url 'system:verify_code' %}"
+                     data-src="{% url 'system:verify_code' %}" alt="验证码">
+            </div>
+          </div>
+          {{ form.verify_code.errors }}
+          {{ form.non_field_errors }}
+           {% csrf_token %}
+          <button class="login-btn common-div" type="submit">登录</button>
+          <a href="javascript:;" class="login-oth-btn common-div">微信登录</a>
+          <a href="javascript:;" class="login-oth-btn common-div">QQ登录</a>
+          <a href="javascript:;" class="login-oth-btn common-div">微博登录</a>
         </form>
       </div>
       <div class="forgets">
-        <a href="pwd_change.html">忘记密码？</a>
-        <a href="regist.html">免费注册</a>
+        <a href="#">忘记密码？</a>
+        <a href="{% url 'account:user_register' %}">快速注册</a>
       </div>
     </div>
-    <script src="/static/lib/jquery-2.1.4.js"></script>
-    <script src="/static/lib/fastclick.js"></script>
-    <script type="text/javascript" src="/static/js/jquery.Spinner.js"></script>
+{% endblock %}
+{% block footer %}
     <script>
-      $(function() {
-        FastClick.attach(document.body);
-      });
+    <!---->
+        $('.verify-code-img').click(function() {
+            $(this).attr('src', $(this).attr('data-src') + '?t=' + new Date().getTime())
+        })
     </script>
-
-    <script src="/static/js/jquery-weui.js"></script>
-  </body>
-</html>
+{% endblock %}
