--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -1,37 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>手机注册</title>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <meta name="description" content="" />
-    <link rel="stylesheet" href="lib/weui.min.css" />
-    <link rel="stylesheet" href="css/jquery-weui.css" />
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body ontouchstart class="container">
+{%  extends 'base.html' %}
+{% block title %}
+<title>手机注册</title>
+{% endblock %}
+{% block container %}
     <!--主体-->
     <header class="wy-header">
       <div class="wy-header-icon-back"><span></span></div>
       <div class="wy-header-title">手机注册</div>
     </header>
-    <div class="weui-content">
+    <form class="weui-content" method="post" action="{% url 'account:user_register' %}">
       <div class="weui-cells weui-cells_form wy-address-edit">
         <div class="weui-cell weui-cell_vcode">
           <div class="weui-cell__hd">
             <label class="weui-label wy-lab">手机号</label>
           </div>
           <div class="weui-cell__bd">
-            <input class="weui-input" type="tel" placeholder="请输入手机号" />
+            <input class="weui-input" type="tel" name="username"
+                   placeholder="请输入手机号"
+                    value="{{ form.username.value|default_if_none:''}}"/>
           </div>
           <div class="weui-cell__ft">
             <button class="weui-vcode-btn">获取验证码</button>
           </div>
         </div>
+          {{ form.username.errors }}
+        <div class="weui-cell">
+          <div class="weui-cell__hd">
+            <label class="weui-label wy-lab">昵称</label>
+          </div>
+          <div class="weui-cell__bd">
+            <input
+              class="weui-input"
+              type="text"
+              name="nickname"
+              value="{{ form.nickname.value|default_if_none:'' }}"
+              placeholder="请输入昵称"
+            />
+          </div>
+        </div>
+
         <div class="weui-cell weui-cell_vcode">
           <div class="weui-cell__hd">
             <label class="weui-label wy-lab">验证码</label>
@@ -39,14 +46,19 @@
           <div class="weui-cell__bd">
             <input
               class="weui-input"
-              type="number"
+              name="verify_code"
+              type="text"
               placeholder="请输入验证码"
             />
           </div>
           <div class="weui-cell__ft">
-            <img class="weui-vcode-img" src="./images/vcode.jpg" />
+           <img class="verify-code-img"
+                     style="width: 100%; height: 100%;"
+                     src="{% url 'system:verify_code' %}"
+                     data-src="{% url 'system:verify_code' %}" alt="验证码">
           </div>
         </div>
+          {{ form.verify_code.errors }}
         <div class="weui-cell">
           <div class="weui-cell__hd">
             <label class="weui-label wy-lab">设置密码</label>
@@ -54,12 +66,13 @@
           <div class="weui-cell__bd">
             <input
               class="weui-input"
-              type="number"
-              pattern="[0-9]*"
+              type="password"
+              name="password"
               placeholder="请输入新密码"
             />
           </div>
         </div>
+          {{ form.password.errors }}
         <div class="weui-cell">
           <div class="weui-cell__hd">
             <label class="weui-label wy-lab">确认密码</label>
@@ -67,12 +80,14 @@
           <div class="weui-cell__bd">
             <input
               class="weui-input"
-              type="number"
-              pattern="[0-9]*"
+              type="password"
+              name="repassword"
               placeholder="请再次输入新密码"
             />
           </div>
         </div>
+          {{ form.password_repeat.errors }}
+          {{ form.non_field_errors }}
       </div>
       <label for="weuiAgree" class="weui-agree">
         <input
@@ -85,21 +100,19 @@
           >阅读并同意<a href="javascript:void(0);">《注册协议》</a></span
         >
       </label>
+        {% csrf_token %}
       <div class="weui-btn-area">
-        <a href="javascript:;" class="weui-btn weui-btn_warn">注册并登陆</a>
+          <input class="weui-btn weui-btn_warn" type="submit" value="注册并登陆">
       </div>
       <div class="weui-cells__tips t-c font-12">登陆账号为您输入的手机号码</div>
-    </div>
+    </form>
+{% endblock %}
 
-    <script src="lib/jquery-2.1.4.js"></script>
-    <script src="lib/fastclick.js"></script>
-    <script type="text/javascript" src="js/jquery.Spinner.js"></script>
+{% block footer %}
     <script>
-      $(function() {
-        FastClick.attach(document.body);
-      });
+    <!---->
+        $('.verify-code-img').click(function() {
+            $(this).attr('src', $(this).attr('data-src') + '?t=' + new Date().getTime())
+        })
     </script>
-
-    <script src="js/jquery-weui.js"></script>
-  </body>
-</html>
+{% endblock %}
